Fixed #8232 and the its top alignment

--- a/scss/components/_dropdown-menu.scss
+++ b/scss/components/_dropdown-menu.scss
@@ -170,8 +170,7 @@ $dropdownmenu-border-width: nth($dropdownmenu-border, 1);
 
     &.opens-left .is-dropdown-submenu {
       left: auto;
-      right: 0;
-      top: 100%;
+      right: 100%;
     }
   }
 
